Fix list overflow

--- a/src/assets/stylesheets/_fmp.scss
+++ b/src/assets/stylesheets/_fmp.scss
@@ -77,7 +77,7 @@ main {
   font-size: 12px;
 }
 
-.list-table {
+.list {
   display: flex;
   flex-direction: column;
   list-style: none;
@@ -85,11 +85,11 @@ main {
   padding: 0;
 
   .list__item {
+    display: flex;
     line-height: 1.6;
     margin-bottom: 12px;
 
-    &::before {
-      content: attr(data-icon);
+    .list__icon {
       padding-right: 6px;
     }
   }
